# django-clean-architecture

./: .dockerignore  .gitignore  README.md  pyproject.toml
src/config/: asgi.py  settings.py
src/routers/: main_router.py
